test/errors/error5.vult
fun foo() {
   _ = *1;
}
